Added display_name to files
